# mesh

./: CMakeLists.txt  README.md  main.cpp  mesh.cpp  mesh.hpp  meshbuilder.cpp  meshbuilder.hpp
objects/: description.hpp  edge.hpp  imobject.hpp  node.hpp  types.hpp
utils/: meshpack.cpp  meshpack.hpp
